--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,17 @@
     ],
     "require": {
         "php": "^7.0",
+        "ext-dom" : "*",
         "illuminate/support": ">=5.1",
         "phpdocumentor/reflection": "^3.0"
     },
     "require-dev": {
+        "php": "^7.1",
         "vlucas/phpdotenv": "^2.4",
         "orchestra/testbench": "~3.0",
-        "phpunit/phpunit": "^5.4",
-        "wsdl2phpgenerator/wsdl2phpgenerator": "^3.4"
+        "phpunit/phpunit": "^7.0",
+        "wsdl2phpgenerator/wsdl2phpgenerator": "^3.4",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
