--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^7.0",
         "ext-dom" : "*",
         "illuminate/support": ">=5.1",
-        "phpdocumentor/reflection": "^3.0"
+        "phpdocumentor/reflection": "~4.0"
     },
     "require-dev": {
         "php": "^7.1",
